--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,8 @@
 name: BedwarsRandomJoin
-version: 1.0
+version: 1.0.1
 main: github.tsffish.bedwarsrandomjoin.BedwarsRandomJoin
 author: tsffish
-depend:
-  - BedwarsRel
+api-version: 1.13
 commands:
   bwrj:
     description: Hello Command
